# affinda-python

./: .editorconfig  .git-blame-ignore-revs  .gitconfig  .gitignore  .isort.cfg  .mailmap  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  currency_support_findings.md  models.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sync_operations.md  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
affinda/: __init__.py  __main__.py  _affinda_api.py  _configuration.py  _patch.py  _vendor.py  _version.py  generate_models.py  token_credential.py
affinda/_rest/: __init__.py  _request_builders.py  _request_builders_py3.py
affinda/aio/: __init__.py  _affinda_api.py  _configuration.py  _patch.py  token_credential.py
affinda/aio/operations/: __init__.py  _affinda_api_operations.py  _patch.py
affinda/models/: __init__.py  _affinda_api_enums.py  _models.py  _models_py3.py  _patch.py
affinda/operations/: __init__.py  _affinda_api_operations.py  _patch.py
docs/: models.md  samples_python.md  sync_operations.md
