[metadata]
name = affinda
version = attr: affinda._version.VERSION
url = https://github.com/affinda/affinda-python
author = Affinda
author_email = "contact@affinda.com",
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
license_files = LICENSE
description = Affinda API client for Python
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = Affinda, OpenAPI, Swagger, autorest
python_requires = >=3.6
project_urls =
    Bug Tracker=https://github.com/affinda/affinda-python/issues

[options]
include_package_data = True
packages = find:
install_requires =
    requests
    azure-core
    azure-identity
    msrest
