[metadata]
name = affinda
version = attr: affinda._version.VERSION
description = Client library for the Affinda API
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/affinda/affinda-python
author = Affinda
author_email = contact@affinda.com
maintainer = Affinda
maintainer_email = contact@affinda.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
keywords =
    affinda
    api
project_urls =
    Changelog = https://github.com/affinda/affinda-python/blob/stable/CHANGELOG.md
    Documentation = https://github.com/affinda/affinda-python/blob/stable/README.md
    Source = https://github.com/affinda/affinda-python
    Tracker = https://github.com/affinda/affinda-python/issues

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 40.8.0
install_requires =
    azure-core >= 1.26.0
    azure-identity
    msrest >= 0.6.21
    requests
[options.package_data]
affinda = py.typed

[options.extras_require]
dev =
    black
    check-manifest
    mypy
    tox >= 3.3.0
    twine
    types-requests
    wheel

[options.packages.find]
include =
    affinda
    affinda.*
